Start on eligibility end point.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -85,12 +85,11 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.timetopayeligibility.controllers.MicroserviceHelloWorld = {
+  uk.gov.hmrc.timetopayeligibility.controllers.EligibilityController = {
       needsAuth = false
-      needsLogging = false
-      needsAuditing = false
+      needsLogging = true
+      needsAuditing = true
     }
-
 }
 
 
