--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,6 +17,8 @@
 
 appName=time-to-pay-eligibility
 
+play.application.loader=uk.gov.hmrc.timetopayeligibility.ApplicationLoader
+
 # Play Modules
 # ~~~~
 # Additional play modules can be added here
@@ -67,7 +69,6 @@ application.global=uk.gov.hmrc.timetopayeligibility.MicroserviceGlobal
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
 application.router=prod.Routes
-
 
 # Controller
 # ~~~~~
@@ -135,9 +136,6 @@ auditing {
     }
 }
 
-
-
-
 microservice {
     metrics {
         graphite {
@@ -155,5 +153,17 @@ microservice {
             port=8500
         }
 
+    }
+}
+
+
+Dev {
+    microservice {
+        services {
+            returns-service {
+                host = localhost
+                port = 8887
+            }
+        }
     }
 }
