Add debits service to endpoint response.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -160,7 +160,7 @@ microservice {
 Dev {
     microservice {
         services {
-            returns-service {
+            des-services {
                 host = localhost
                 port = 8887
             }
