--- a/conf/application.conf
+++ b/conf/application.conf
@@ -164,6 +164,10 @@ Dev {
                 host = localhost
                 port = 8887
             }
+            sa-services {
+                host = localhost
+                port = 8900
+            }
         }
     }
 }
