--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,7 +17,7 @@
 
 appName=time-to-pay-taxpayer
 
-play.application.loader=uk.gov.hmrc.timetopayeligibility.ApplicationLoader
+play.application.loader= uk.gov.hmrc.timetopaytaxpayer.ApplicationLoader
 
 # Play Modules
 # ~~~~
@@ -56,7 +56,7 @@ application.langs="en"
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
-application.global=uk.gov.hmrc.timetopayeligibility.MicroserviceGlobal
+application.global= uk.gov.hmrc.timetopaytaxpayer.MicroserviceGlobal
 
 # Router
 # ~~~~~
