Specify DES header.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,6 +163,8 @@ Dev {
             des-services {
                 host = localhost
                 port = 8887
+                authorizationToken = secret
+                serviceEnvironment = localhost
             }
             sa-services {
                 host = localhost
