--- a/conf/application.conf
+++ b/conf/application.conf
@@ -86,7 +86,7 @@ controllers {
       needsAuditing = false
     }
 
-  uk.gov.hmrc.timetopayeligibility.controllers.EligibilityController = {
+    uk.gov.hmrc.timetopaytaxpayer.controllers.TaxPayerController = {
       needsAuth = false
       needsLogging = true
       needsAuditing = true
@@ -110,7 +110,7 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=ERROR
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
