--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,7 +68,7 @@ application.global= uk.gov.hmrc.timetopaytaxpayer.MicroserviceGlobal
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-application.router=prod.Routes
+application.router = testOnlyDoNotUseInProd.routes
 
 # Controller
 # ~~~~~
