--- a/conf/application.conf
+++ b/conf/application.conf
@@ -99,7 +99,7 @@ logger.root = ERROR
 logger.play = INFO
 
 # Logger provided to your application:
-logger.application = ERROR
+logger.application = DEBUG
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
