--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,17 +17,28 @@
 
 appName = time-to-pay-taxpayer
 
-play.application.loader = uk.gov.hmrc.timetopaytaxpayer.ApplicationLoader
+include "backend.conf"
 
-# Play Modules
-# ~~~~
-# Additional play modules can be added here
-play.modules.enabled += "com.kenshoo.play.metrics.PlayModule"
+# An ApplicationLoader that uses Guice to bootstrap the application.
+play.application.loader = "uk.gov.hmrc.play.bootstrap.ApplicationLoader"
 
-# Global request handler
-# ~~~~
-# Set to the object handler for migrated 2.3 services
-play.http.requestHandler = "play.api.http.GlobalSettingsHttpRequestHandler"
+# Primary entry point for all HTTP requests on Play applications
+play.http.requestHandler = "uk.gov.hmrc.play.bootstrap.http.RequestHandler"
+
+# Provides an implementation of AuditConnector. Use `uk.gov.hmrc.play.bootstrap.AuditModule` or create your own.
+# An audit connector must be provided.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
+
+# Provides an implementation of MetricsFilter. Use `uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule` or create your own.
+# A metric filter must be provided
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
+
+# Provides an implementation and configures all filters required by a Platform backend microservice.
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
+play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
 # Session Timeout
 # ~~~~
@@ -51,12 +62,6 @@ application.session.secure = false
 # The application languages
 # ~~~~~
 application.langs = "en"
-
-# Global object class
-# ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-application.global = uk.gov.hmrc.timetopaytaxpayer.MicroserviceGlobal
 
 # Router
 # ~~~~~
