--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,9 @@ play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
 
+# Default HTTP client
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
@@ -73,7 +76,7 @@ application.langs = "en"
 # you may need to define a router file `conf/my.application.routes`.
 # Default to Routes in the root package (and conf/routes)
 # !!!WARNING!!! DO NOT CHANGE THIS ROUTER
-application.router = testOnlyDoNotUseInProd.routes
+play.http.router = prod.Routes
 
 # Controller
 # ~~~~~
@@ -113,7 +116,7 @@ metrics {
   durationUnit = SECONDS
   showSamples = true
   jvm = true
-  enabled = true
+  enabled = false
 }
 
 
