[PP][OPS-2802] extracted shared components in cor project and improved controller and it's spec

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -154,8 +154,8 @@ microservice {
     des-services {
       host = localhost
       port = 8887
-      authorizationToken = secret
-      serviceEnvironment = localhost
+      authorizationToken = secretDesToken
+      serviceEnvironment = localhostEnvironment
     }
 
     sa-services {
