-sa-stub is to be decommissioned

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,7 +136,7 @@ microservice {
       serviceEnvironment = localhostEnvironment
     }
 
-    sa-services {
+    payment-stubs-protected {
       host = localhost
       port = 9126
     }
