-sa-stub is to be decommissioned -also fixed the build issue so can now use this updated version

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,9 +136,9 @@ microservice {
       serviceEnvironment = localhostEnvironment
     }
 
-    sa-services {
+    payment-stubs-protected {
       host = localhost
-      port = 9858
+      port = 9126
     }
   }
 }
