--- a/conf/application.conf
+++ b/conf/application.conf
@@ -136,7 +136,7 @@ microservice {
       serviceEnvironment = localhostEnvironment
     }
 
-    payment-stubs-protected {
+    sa-services {
       host = localhost
       port = 9126
     }
