--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,7 +37,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModu
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Default HTTP client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
