--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,8 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 # Default HTTP client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
+
 # Session Timeout
 # ~~~~
 # The default session timeout for the app is 15 minutes (900seconds).
