--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,7 @@ play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandl
 
 # Default HTTP client
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 
